tests/ui/unstable-feature-bound/unstable_inherent_method.stderr
error: the `unstable_feature_bound` attribute cannot be used on required trait methods
  --> $DIR/unstable_inherent_method.rs:11:7
   |
LL |     #[unstable_feature_bound(foo)]
   |       ^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: the `unstable_feature_bound` attribute can be applied to functions, trait impl blocks, and traits

error: the `unstable_feature_bound` attribute cannot be used on trait methods in impl blocks
  --> $DIR/unstable_inherent_method.rs:18:7
   |
LL |     #[unstable_feature_bound(foo)]
   |       ^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: the `unstable_feature_bound` attribute can be applied to functions, trait impl blocks, and traits

error: aborting due to 2 previous errors

